--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -4,6 +4,24 @@
   <%= f.error_notification %>
 
   <div class="form-inputs">
+
+  <div class="d-flex flex-row"  >
+    <%= f.input :first_name,
+                  required: true,
+                  autofocus: true,
+                  input_html: { autocomplete: "first_name" }%>
+
+    <%= f.input :last_name,
+                  required: true,
+                  autofocus: true,
+                  input_html: { autocomplete: "last_name" }%>
+  </div>
+  <div class ='d-flex flex-column justify-content-around'>
+     <%= f.input :username,
+                required: true,
+                autofocus: true,
+                input_html: { autocomplete: "username" }%>
+
     <%= f.input :email,
                 required: true,
                 autofocus: true,
@@ -15,6 +33,8 @@
     <%= f.input :password_confirmation,
                 required: true,
                 input_html: { autocomplete: "new-password" } %>
+  </div>
+
   </div>
 
   <div class="form-actions">
