--- a/app/views/communities/index.html.erb
+++ b/app/views/communities/index.html.erb
@@ -13,7 +13,7 @@
 
     <div class="card">
       <h3><%= link_to community.name, community  %></h3>
-      <%= simple_format community.bio %>
+      <%= simple_format community.description %>
     </div>
 
   <% end %>
