--- a/app/views/communities/show.html.erb
+++ b/app/views/communities/show.html.erb
@@ -1,2 +1,3 @@
-<h1>Communities#show</h1>
-<p>Find me in app/views/communities/show.html.erb</p>
+
+<h4> <%= @community.name %> </h4>
+<p><%= @community.description %></p>
