--- a/app/views/communities/show.html.erb
+++ b/app/views/communities/show.html.erb
@@ -1,3 +1,18 @@
+<div class="d-flex justify-content-between">
+  <h3> <%= @community.name %> </h3>
+  <%= link_to "Cria um novo Post", new_community_post_path(@community), class: "btn btn-primary float-right" %>
+</div>
 
-<h4> <%= @community.name %> </h4>
-<p><%= @community.description %></p>
+<%#= Aqui é preciso iterar todos os posts %>
+<div class="row mt-3">
+  <div class="col-sm-8">
+    <% @posts.each do |post| %>
+      <%= render partial: "posts/list" %>
+    <% end %>
+  </div>
+
+  <div class="col-sm-4 p-5">
+        <p><%= @community.description %></p>
+        <p> <%= @community.rules  %></p>
+  </div>
+</div>
