--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -4,6 +4,24 @@
   <%= f.error_notification %>
 
   <div class="form-inputs">
+    <%= f.input :first_name,
+                  required: false,
+                  autofocus: true,
+                  input_html: { autocomplete: "first_name" },
+                  class: 'col-6'%>
+    <%= f.input :last_name,
+                  required: false,
+                  autofocus: true,
+                  input_html: { autocomplete: "last_name" },
+                  class: 'col-6'%>
+    <%= f.input :username,
+                required: false,
+                autofocus: true,
+                input_html: { autocomplete: "username" }%>
+    <%= f.input :bio,
+                required: false,
+                autofocus: true,
+                input_html: { autocomplete: "Sobre mim" }%>
     <%= f.input :email, required: true, autofocus: true %>
 
     <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
@@ -24,12 +42,10 @@
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit, "Update" %>
+    <%= f.button :submit, "Update", class: 'btn btn-primary' %>
   </div>
 <% end %>
 
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
+<p> <%= link_to "Cancelar a minha conta", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
 
 <%= link_to "Back", :back %>
