--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -5,18 +5,24 @@
 
   <div class="form-inputs">
 
-  <div class="d-flex flex-row"  >
-    <%= f.input :first_name,
-                  required: true,
-                  autofocus: true,
-                  input_html: { autocomplete: "first_name" }%>
+  <div class="form-group row"  >
+    <div class="col">
+      <%= f.input :first_name,
+                    required: true,
+                    autofocus: true,
+                    input_html: { autocomplete: "first_name" },
+                    class: 'form-control'%>
+    </div>
+    <div class="col">
 
-    <%= f.input :last_name,
-                  required: true,
-                  autofocus: true,
-                  input_html: { autocomplete: "last_name" }%>
+      <%= f.input :last_name,
+                    required: true,
+                    autofocus: true,
+                    input_html: { autocomplete: "last_name" },
+                    class: 'form-control'%>
+    </div>
   </div>
-  <div class ='d-flex flex-column justify-content-around'>
+  <div class =''>
      <%= f.input :username,
                 required: true,
                 autofocus: true,
@@ -38,7 +44,7 @@
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit, "Sign up" %>
+    <%= f.button :submit, "Sign up", class: 'btn btn-primary' %>
   </div>
 <% end %>
 
