--- a/app/views/posts/_list.html.erb
+++ b/app/views/posts/_list.html.erb
@@ -1,5 +1,5 @@
  <% @posts.each do |post| %>
-  <div class="card p-2 mt-2 mb-2">
+  <div class="card pl-2 pr-2 pt-1 pb-1 mb-2">
     <div class="card-body">
       <h4><%= link_to post.title, community_post_path(post.community,post) %></h4>
       <p class = 'small-description'><small> <%= link_to post.community.name, community_path(post.community) %>
