--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,2 +1,15 @@
-<h4> <%= @post.title %></h4>
-<p> <%= @post.body %></p>
+<h2> <%= @post.title %></h2>
+ <%=  simple_format @post.body %>
+  <div id='post-comments'>
+    <%= render partial: "posts/comments", locals: { comments: @post.comments } %>
+  </div>
+ <h4> Contribui </h4>
+<%#= simple_form_for @comment , method: :post do |f|   %>
+  <%#= f.input :message, placeholder: "O teu comentário...", class: "form-control" %>
+  <%#= f.submit "Comenta", class: "btn btn-primary mt-3" %>
+<% #end %>
+
+<%= form_for comment_path, method: :post, remote: true do |f|  %>
+  <%= f.text_area :message, placeholder: "O teu comentário...", class: "form-control" %>
+  <%= f.submit "Comenta", class: "btn btn-primary mt-3" %>
+<% end %>
