--- a/app/views/communities/show.html.erb
+++ b/app/views/communities/show.html.erb
@@ -3,10 +3,10 @@
     <h3> <%= @community.name %> </h3>
   </div>
   <div class="col-sm-4">
-    <% if @is_subscribed  %>
+    <% if @community.user_subscribed(current_user) %>
         <%= link_to "Cria um novo Post", new_community_post_path(@community), class: "btn btn-primary float-right"%>
     <% else %>
-        <%= render partial: "communities/subscribe", locals: { community_id: @community.id} %>
+        <%= render partial: "communities/subscribe" %>
     <% end %>
   </div>
 </div>
