--- a/app/views/communities/_subscribe.html.erb
+++ b/app/views/communities/_subscribe.html.erb
@@ -1,4 +1,4 @@
 <%= simple_form_for @subscription do |f| %>
-  <%= f.hidden_field :community_id, value:community_id %>
+  <%= f.hidden_field :community_id, value: @community.id %>
   <%= f.submit "Subscreve", class: "btn btn-success float-right" %>
 <% end  %>
