--- a/app/views/posts/_list.html.erb
+++ b/app/views/posts/_list.html.erb
@@ -1,13 +1,22 @@
  <% @posts.each do |post| %>
   <div class="card pl-2 pr-2 pt-1 pb-1 mb-2">
-    <div class="card-body">
-      <h4><%= link_to post.title, community_post_path(post.community,post) %></h4>
-      <p class = 'small-description'><small> <%= link_to post.community.name, community_path(post.community) %>
-        Posted by: <%= link_to post.user.username, profile_path(post.user.username) %> <%= time_ago_in_words post.created_at %></small></p>
-      <p>
-      <%= truncate post.body, length: 100 %>
-      </p>
+    <div class="d-flex align-items-center justify-content-center">
+        <div class="col-1 container-upvotes">
+          <div class="fa fa-arrow-up upvote"> </div>
+          <span class="post-total-votes"> <%= post.total_votes %></span>
+          <div class="fa fa-arrow-down downvote"> </div>
+        </div>
+        <div class="card-body col-11">
+          <h4><%= link_to post.title, community_post_path(post.community,post) %></h4>
+          <p class = 'small-description'><small> <%= link_to post.community.name, community_path(post.community) %>
+            Posted by: <%= link_to post.user.username, profile_path(post.user.username) %> <%= time_ago_in_words post.created_at %></small></p>
+          <p>
+          <%= truncate post.body, length: 100 %>
+          </p>
+        </div>
     </div>
   </div>
 <% end %>
+
+
 
