--- a/app/views/posts/_list.html.erb
+++ b/app/views/posts/_list.html.erb
@@ -1,7 +1,7 @@
  <% @posts.each do |post| %>
   <div class="card pl-2 pr-2 pt-1 pb-1 mb-2">
-    <div class="d-flex align-items-center justify-content-center">
-        <div class="col-1 container-upvotes">
+    <div class="d-flex align-items-center">
+        <div id="vote-actions-<%= post.id %>" class="col-1 vote" data-id="<%= post.id %>">
           <div class="fa fa-arrow-up upvote"> </div>
           <span class="post-total-votes"> <%= post.total_votes %></span>
           <div class="fa fa-arrow-down downvote"> </div>
