--- a/app/views/posts/_list.html.erb
+++ b/app/views/posts/_list.html.erb
@@ -1,10 +1,10 @@
  <% @posts.each do |post| %>
   <div class="card pl-2 pr-2 pt-1 pb-1 mb-2">
     <div class="d-flex align-items-center">
-        <div id="vote-actions-<%= post.id %>" class="col-1 vote" data-id="<%= post.id %>">
-          <div class="fa fa-arrow-up upvote  <%= is_upvoted post %>"> </div>
-          <span class="font-weight-bold score"> <%= post.score %></span>
-          <div class="fa fa-arrow-down downvote <%= is_downvoted post %> "> </div>
+        <div id="vote-actions" data-controller="vote" class="col-1 vote" ">
+          <div class="fa fa-arrow-up upvote " data-action="click->vote#upvote"> </div>
+          <span class="score-<%= post.id %>" data-target="vote.score"> <%= post.score %> </span>
+          <div class="fa fa-arrow-down downvote "> </div>
         </div>
         <div class="card-body col-11">
           <h4><%= link_to post.title, community_post_path(post.community,post) %></h4>
