--- a/app/views/posts/_list.html.erb
+++ b/app/views/posts/_list.html.erb
@@ -2,9 +2,12 @@
   <div class="card pl-2 pr-2 pt-1 pb-1 mb-2">
     <div class="d-flex align-items-center">
         <div id="vote-actions" data-controller="vote" class="col-1 vote" ">
-          <div class="fa fa-arrow-up upvote " data-action="click->vote#upvote"> </div>
+          <div class="fa fa-arrow-up upvote <%= is_upvoted post %>" data-action="click->vote#upvote"> </div>
           <span class="score-<%= post.id %>" data-target="vote.score"> <%= post.score %> </span>
-          <div class="fa fa-arrow-down downvote "> </div>
+          <div class="fa fa-arrow-down downvote <%= is_downvoted post %>" data-action="click->vote#downvote"> </div>
+
+
+
         </div>
         <div class="card-body col-11">
           <h4><%= link_to post.title, community_post_path(post.community,post) %></h4>
