--- a/app/assets/stylesheets/components/_comments.scss
+++ b/app/assets/stylesheets/components/_comments.scss
@@ -30,3 +30,17 @@ li {
   overflow: hidden;
   background-color: #f1f1f1;
 }
+
+.card-buttons  {
+	a {
+		font-size: 17px;
+	}
+
+	button {
+		font-size: 17px;
+	}
+	p {
+		font-size:17px;
+	}
+
+}
