--- a/app/assets/stylesheets/components/_upvotes.scss
+++ b/app/assets/stylesheets/components/_upvotes.scss
@@ -5,25 +5,30 @@
 .upvote  {
     display: block;
     width: 100%;
-    padding-top: 10px;
+		padding-top: 10px;
+		background-color: transparent;
 		padding-bottom: 10px;
     color:black;
     &.active {
-        color:purple;
+			color:rgb(230, 0, 0);	
     }
 }
 
 
 .downvote  {
 	display: block;
+	background-color: transparent;
 	width: 100%;
 	padding-top: 10px;
 	padding-bottom: 10px;
 	color:black;
 	&.active {
-			color:purple;
+		color:rgb(230, 0, 0);		
 	}
 }
+
+
+
 
 .post-total-votes{
 	text-align: center;
