minor changes, user validations and ordering posts by upvote

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -22,7 +22,7 @@
       <p class> Popular Posts</p>
     </div>
   </div>
-  <div class="row">
+  <div class="d-flex flex-wrap">
 
     <div class="col-8">
       <%= render partial: "posts/list" %>
