--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -24,11 +24,11 @@
   </div>
   <div class="d-flex flex-wrap">
 
-    <div class="col-8">
+    <div class="col-sm-12 col-md-8 ">
       <%= render partial: "posts/list" %>
     </div>
 
-    <div class="col-4">
+    <div class="col-sm-12 col-md-4 ">
       <p class = 'h5 mb-2'>Comunidades Trending</p>
         <div class = 'card'>
           <ul class="list-group">
