--- a/app/views/communities/show.html.erb
+++ b/app/views/communities/show.html.erb
@@ -3,11 +3,14 @@
     <h3> <%= @community.name %> </h3>
   </div>
   <div class="col-sm-4">
-    <% if @community.user_subscribed(current_user) %>
-        <%= link_to "Cria um novo Post", new_community_post_path(@community), class: "btn btn-primary float-right"%>
-    <% else %>
-        <%= render partial: "communities/subscribe" %>
-    <% end %>
+	  <% if user_signed_in? %>
+			<% if @community.user_subscribed(current_user) %>
+					<%= link_to "Cria um novo Post", new_community_post_path(@community), class: "btn btn-primary float-right"%>
+			<% else %>
+					<%= render partial: "communities/subscribe" %>
+			<% end %>
+		<% end %>
+		
   </div>
 </div>
   <%#= Aqui é preciso iterar todos os posts %>
