--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,6 +1,13 @@
 <h1>Categories#index</h1>
 <p>Find me in app/views/categories/index.html.erb</p>
-<% @categories.each do |category| %>
-	<%= category.name %>
-	<%= category.description %>
-<% end %>
+<div class="index-category">
+	<% @categories.each_with_index do |category, index| %>
+	<div class="index-category-content">
+		<img src="<%=fetch_category_images(index)%>" alt="">
+		<h5> <%= category.name %> </h5>
+		<%= category.description %>
+	</div>		
+		
+	<% end %>
+</div>
+
