--- a/app/views/communities/_form.html.erb
+++ b/app/views/communities/_form.html.erb
@@ -1,9 +1,31 @@
-
 <%= simple_form_for @community do |f| %>
 
 
   <%= f.input :name, label: 'Nome', class: 'form-group' %>
-  <%= f.input :description, label: 'Descrição', input_html: {rows: 6}, class: 'form-control' %>
-  <%= f.submit "Criar Comunidade", class: "btn btn-primary" %>
+	<%= f.input :description, label: 'Descrição', input_html: {rows: 6}, class: 'form-control' %>
+
+	<div class = "" data-controller="category">
+		<p> A que categorias pertence esta comunidade? <p>
+		<div class="category-checkboxes">
+			<%= f.association :categories, as: :check_boxes, input_html: { class: 'special', "data-target": "category.checkbox"  } %>
+		</div> 
+		<div class="card-category" >
+			<% Category.all.each_with_index do |category, index| %>
+				<% index+=1 %>
+				<div
+					data-action="click->category#checking"
+					style="background-image: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.4)), url('<%= fetch_category_images(index-1) %>')"
+					class="card-category-content" 
+					id="category-<%=index%>"
+				>
+					 <%= category.name %>  
+				</div>
+			<% end %>
+		</div>
+	</div> 
+	<br>
+	
+	<%= f.submit "Criar Comunidade", class: "btn btn-primary" %>
+ 
 
 <% end %>
