Added sidebar, started doing front-end

--- a/app/assets/stylesheets/components/_badges.scss
+++ b/app/assets/stylesheets/components/_badges.scss
@@ -1,5 +1,4 @@
 .category-badge {
-	text-overflow: ellipsis;
 }
 .about-community {
 	overflow: hidden;
@@ -40,4 +39,9 @@
 	font-weight: bold;
 
 	box-shadow: 1px 1px 6px lightgrey;
+}
+
+.category-list {
+	overflow: hidden;
+	text-overflow: ellipsis;
 }
