--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -5,3 +5,7 @@
 @import "comments";
 @import "upvotes";
 @import "badges";
+@import "sidebar";
+@import "layout";
+@import "cards";
+@import "category-card";
