--- a/app/views/communities/show.html.erb
+++ b/app/views/communities/show.html.erb
@@ -1,8 +1,8 @@
 <div class="row mb-4">
-  <div class="col-sm-8">
-    <h3> <%= @community.name %> </h3>
+  <div class="col-sm-12 col-md-8">
+    <h3 class='text-center'> <%= @community.name %> </h3>
   </div>
-  <div class="col-sm-4">
+  <div class="col-sm-12 col-md-4">
 	  <% if user_signed_in? %>
 			<% if @community.user_subscribed(current_user) %>
 					<%= link_to "Cria um novo Post", new_community_post_path(@community), class: "btn btn-primary float-right"%>
@@ -15,15 +15,11 @@
 </div>
   <%#= Aqui é preciso iterar todos os posts %>
   <div class="row mt-3">
-    <div class="col-sm-8">
-        <%= render partial: "posts/list" %>
-    </div>
-
-    <div class="col-sm-4 about-community">
+    <div class="col-sm-12 col-md-4 order-md-2 about-community">
         <div class="card p-3">
           <p class = 'h5'>Acerca desta Comunidade</p>
           <p class = mt-2> <small><%= @community.description  %></small> </p>
-					<div> 
+					<div class='category-list' > 
 					<% @community.categories.each do |category| %>
 						<li class="badge badge-primary category-badge"> <%= category.name %> </li>				
 					<% end %>
@@ -32,6 +28,9 @@
 					<p> <%= pluralize @subscriber_count, "Membro" %> </p>
         </div>
         <p> <%= @community.rules  %></p>
+    </div>
+		<div class="col-sm-12 col-md-8 order-md-1">
+        <%= render partial: "posts/list" %>
     </div>
   </div>
 
