--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,25 +1,24 @@
-  <div class="row">
-    <div class="col">
-      <h3>Trending Posts</h3>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-sm-3">
-      trending 1
-    </div>
-    <div class="col-sm-3">
-      trending 2
-    </div>
-    <div class="col-sm-3">
-      trending 3
-    </div>
-    <div class="col-sm-3">
-      trending 4
-    </div>
-  </div>
+	<div class="pick-category-index">
+		<h3>Categorias</h3>
+		<div class="homepage-categories">
+			<div class=" category-card">
+				<p> Agricultura <br>	Alimentação </p> 
+			</div>
+			<div class="category-card">
+			<p> Arquitectura <br>	Construção </p> 
+			</div>
+			<div class="category-card">
+				<p> Artes <br>	Multimédia </p> 
+			</div>
+			<div class="category-card">
+				<p> Ver mais </p> 
+			</div>
+		</div>
+	</div>
+	
   <div class="row mt-4">
     <div class="col">
-      <p class> Popular Posts</p>
+      <h5 class='mb-3 font-weight-bold'> Popular Posts</h5>
     </div>
   </div>
   <div class="d-flex flex-wrap">
