--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,19 +12,27 @@
 @import "components/index";
 @import "pages/index";
 
-
 footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 2.5rem;
-  background-color: grey;
+	position: absolute;
+	bottom: 0;
+	width: 100%;
+	height: 2.5rem;
+	background-color: grey;
 }
 #page-container {
-  position: relative;
-  min-height: 100vh;
+	position: relative;
+	min-height: 100vh;
 }
 
 #content-wrap {
-  padding-bottom: 2.5rem;   /* Footer height */
+	padding-bottom: 2.5rem; /* Footer height */
+}
+
+a {
+	color: #d95362;
+	&:hover {
+		font-weight: 500;
+		text-decoration: none;
+		color: #8d1b29;
+	}
 }
