--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,12 +1,17 @@
 .navbar-lewagon {
-  justify-content: space-between;
-  background: white;
+	z-index: 10;
+	justify-content: space-between;
+	background: white;
+	box-shadow: 2px 2px 6px rgba(211, 211, 211, 0.61);
+	position: fixed;
+	top: 0;
+	width: 100%;
 }
 
 .navbar-lewagon .navbar-collapse {
-  flex-grow: 0;
+	flex-grow: 0;
 }
 
 .navbar-lewagon .navbar-brand img {
-  width: 40px;
+	width: 40px;
 }
