--- a/app/assets/stylesheets/components/_upvotes.scss
+++ b/app/assets/stylesheets/components/_upvotes.scss
@@ -1,36 +1,31 @@
-.vote{
-	text-align:center;
-	padding:0px;
+.vote {
+	text-align: center;
+	padding: 0px;
 }
-.upvote  {
-    display: block;
-    width: 100%;
-		padding-top: 10px;
-		background-color: transparent;
-		padding-bottom: 10px;
-    color:black;
-    &.active {
-			color:rgb(230, 0, 0);	
-    }
+.upvote {
+	display: block;
+	width: 100%;
+	padding-top: 10px;
+	background-color: transparent;
+	padding-bottom: 10px;
+	color: black;
+	&.active {
+		color: #d95362;
+	}
 }
 
-
-.downvote  {
+.downvote {
 	display: block;
 	background-color: transparent;
 	width: 100%;
 	padding-top: 10px;
 	padding-bottom: 10px;
-	color:black;
+	color: black;
 	&.active {
-		color:rgb(230, 0, 0);		
+		color: #d95362;
 	}
 }
 
-
-
-
-.post-total-votes{
+.post-total-votes {
 	text-align: center;
-
 }
