--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -1,8 +1,7 @@
 // Import Google fonts
-@import url('https://fonts.googleapis.com/css?family=Oswald|Roboto&display=swap');
-// Define fonts for body and headers
-$body-font: "Roboto", "Helvetica", "sans-serif";
-$headers-font: "Oswald", "Helvetica", "sans-serif";
+@import url('https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@500&family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;0,900;1,200&family=Space+Mono:wght@400;700&display=swap'); // Define fonts for body and headers
+$body-font: "Montserrat", "Helvetica", "sans-serif";
+$headers-font: "Space Mono", "Helvetica", "sans-serif";
 
 // To use a font file (.woff) uncomment following lines
 // @font-face {
