--- a/app/assets/stylesheets/components/_category-card.scss
+++ b/app/assets/stylesheets/components/_category-card.scss
@@ -1,11 +1,12 @@
 .pick-category-index {
 	background-color: white;
 	border-radius: 10px 10px 10px 10px;
-	padding: 40px 20px;
+	padding: 40px 30px;
 	border: 0.5px solid #d0d0d0;
 }
 
 .homepage-categories {
+	padding-top: 30px;
 	display: grid;
 	grid-template-columns: 1fr 1fr 1fr 1fr;
 	gap: 10px;
