--- a/app/assets/stylesheets/components/_layout.scss
+++ b/app/assets/stylesheets/components/_layout.scss
@@ -1,5 +1,5 @@
 body {
-	background-color: #e8e1d5;
+	background-color: #f4f0ea;
 	max-width: 100vw;
 }
 
@@ -10,7 +10,7 @@ body {
 .yield-container {
 	padding: 90px;
 	margin: 0 auto;
-	background-color: #e8e1d5;
+	background-color: #f4f0ea;
 	flex-shrink: 1;
 }
 .layout-sidebar {
