added texture to background

--- a/app/assets/stylesheets/components/_layout.scss
+++ b/app/assets/stylesheets/components/_layout.scss
@@ -1,16 +1,24 @@
 body {
-	background-color: #f4f0ea;
 	max-width: 100vw;
+}
+
+.background-overlay {
+	position: fixed;
+	width: 100vw;
+	height: 100vh;
+	z-index: 0;
+	background: image-url('img-noise.png'), #f7f4ef;
+	background-position: center;
+	object-fit: cover;
 }
 
 .main-layout {
 	display: flex;
-	margin-top: 120px;
+	padding-top: 130px;
 }
 .yield-container {
 	padding: 90px;
 	margin: 0 auto;
-	background-color: #f4f0ea;
 	flex-shrink: 1;
 }
 .layout-sidebar {
