--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -3,7 +3,7 @@
 // For example:
 $red: #d95362;
 $blue: #167ffb;
-$yellow: #ffc65a;
+$yellow: #e8e1d5;
 $orange: #e67e22;
 $green: #1edd88;
 $gray: #0e0000;
