--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,8 @@
 					<%= render 'shared/sidebar'%>
 				</div>
         <%= render 'shared/flashes' %>
+				<div class="background-overlay">
+				</div>
           <div class="main-layout">
 						<div class="col-sm-2 fake-sidebar">
 							<p> &nbsp; </p>	
