--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,37 @@
 // Specific CSS for your home-page
+
+.trending-communities-container {
+	min-width: 100px;
+	background-color: white;
+	height: auto;
+	padding: 0px;
+	border-radius: 10px 10px 10px 10px;
+	overflow: hidden;
+}
+
+.trending-communities-header {
+	color: white;
+	text-align: center;
+	background: image-url('transparent-texture.png'), $red;
+	background-position: center;
+	width: 100%;
+	padding: 30px 10px;
+}
+
+.trending-communities-list {
+	padding: 30px 10px;
+	margin-top: 20px;
+	list-style: none;
+
+	.trending-community-item {
+		margin-top: 5px;
+		margin-bottom: 5px;
+		padding: 5px 5px;
+		border-bottom: 0.5px solid lightgrey;
+	}
+}
+
+.main-index-column {
+	min-width: 700px;
+	padding-right: 40px;
+}
